[package]
name = "donow"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A fast, Rust-based task tracker CLI (v0.0.1-beta.1)"

[dependencies]
chrono = { "version" = "0.4.42", "features" = ["serde"] }
clap = { "version" = "4.5.48", "features" = ["derive"] }
colored = "3.0.0"
serde = { "version" = "1.0.226", "features" = ["derive"] }
serde_json = "1.0.145"
