[package]
name = "donow"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A fast, Rust-based task tracker CLI (v0.1.3-beta.2)"
authors = ["tayenx3 - kontajiousgd00@gmail.com"]
readme = "README.md"

[[bin]]
name = "donow"
path = "src/main.rs"

[dependencies]
chrono = { "version" = "0.4.42", "features" = ["serde"] }
clap = { "version" = "4.5.48", "features" = ["derive"] }
colored = "3.0.0"
directories = "6.0.0"
serde = { "version" = "1.0.226", "features" = ["derive"] }
serde_json = "1.0.145"
